Fixed overflow on mobile devices

--- a/_sass/jekyll-theme-minimalistic.scss
+++ b/_sass/jekyll-theme-minimalistic.scss
@@ -229,7 +229,7 @@ hr {
     margin:0;
   }
 
-  section {
+  header, section {
     float:none;
     position:static;
     width:auto;
